// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BASELINE: Custom Rules Validation > Tasks-Camera Relationship > BASELINE: validates tasks with no cameras defined > tasks-no-cameras 1`] = `
{
  "errors": [
    {
      "id": "tasks",
      "message": "Tasks have camera_ids, but no cameras are defined",
    },
  ],
  "formErrorIds": [
    "tasks",
  ],
  "formErrors": [
    "Tasks have camera_ids, but no cameras are defined",
  ],
  "isFormValid": false,
}
`;

exports[`BASELINE: JSON Schema Validation > Array Validation > BASELINE: documents behavior for empty experimenter_name array > empty-experimenter-array 1`] = `
{
  "errors": [
    {
      "instancePath": "/experimenter_name",
      "message": "must NOT have fewer than 1 items",
      "schemaPath": "#/properties/experimenter_name/minItems",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "experimenter_name",
  ],
  "jsonSchemaErrorMessages": [
    "Key: experimenter_name. | Error: must NOT have fewer than 1 items",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/experimenter_name",
      "message": "must NOT have fewer than 1 items",
      "schemaPath": "#/properties/experimenter_name/minItems",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: JSON Schema Validation > Edge Cases and Boundary Values > BASELINE: handles boundary values > boundary-values 1`] = `
{
  "errors": null,
  "isValid": true,
  "jsonSchemaErrorIds": [],
  "jsonSchemaErrorMessages": [],
  "jsonSchemaErrors": null,
  "valid": true,
}
`;

exports[`BASELINE: JSON Schema Validation > Edge Cases and Boundary Values > BASELINE: handles empty optional arrays > empty-optional-arrays 1`] = `
{
  "errors": null,
  "isValid": true,
  "jsonSchemaErrorIds": [],
  "jsonSchemaErrorMessages": [],
  "jsonSchemaErrors": null,
  "valid": true,
}
`;

exports[`BASELINE: JSON Schema Validation > Edge Cases and Boundary Values > BASELINE: handles unicode strings > unicode-strings 1`] = `
{
  "errors": null,
  "isValid": true,
  "jsonSchemaErrorIds": [],
  "jsonSchemaErrorMessages": [],
  "jsonSchemaErrors": null,
  "valid": true,
}
`;

exports[`BASELINE: JSON Schema Validation > Pattern Validation (non-empty strings) > BASELINE: documents current behavior for empty institution > empty-institution 1`] = `
{
  "errors": [
    {
      "instancePath": "/institution",
      "message": "institution cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/institution/pattern",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "institution",
  ],
  "jsonSchemaErrorMessages": [
    "Key: institution. | Error: institution cannot be empty or contain only whitespace",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/institution",
      "message": "institution cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/institution/pattern",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: JSON Schema Validation > Pattern Validation (non-empty strings) > BASELINE: documents current behavior for empty lab string > empty-lab-string 1`] = `
{
  "errors": [
    {
      "instancePath": "/lab",
      "message": "lab cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/lab/pattern",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "lab",
  ],
  "jsonSchemaErrorMessages": [
    "Key: lab. | Error: lab cannot be empty or contain only whitespace",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/lab",
      "message": "lab cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/lab/pattern",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: JSON Schema Validation > Pattern Validation (non-empty strings) > BASELINE: documents current behavior for whitespace-only lab string > whitespace-only-lab 1`] = `
{
  "errors": [
    {
      "instancePath": "/lab",
      "message": "lab cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/lab/pattern",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "lab",
  ],
  "jsonSchemaErrorMessages": [
    "Key: lab. | Error: lab cannot be empty or contain only whitespace",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/lab",
      "message": "lab cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/lab/pattern",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > BUG: Hardware Channel Mapping Validation > BASELINE: documents duplicate channel mappings not detected > duplicate-channel-mapping-bug 1`] = `
{
  "errors": [
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_location'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_x'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_y'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_z'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'units'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "electrode_groups",
  ],
  "jsonSchemaErrorMessages": [
    "Key: electrode_groups, 0. | Error: must have required property 'targeted_location'",
    "Key: electrode_groups, 0. | Error: must have required property 'targeted_x'",
    "Key: electrode_groups, 0. | Error: must have required property 'targeted_y'",
    "Key: electrode_groups, 0. | Error: must have required property 'targeted_z'",
    "Key: electrode_groups, 0. | Error: must have required property 'units'",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_location'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_x'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_y'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'targeted_z'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
    {
      "instancePath": "/electrode_groups/0",
      "message": "must have required property 'units'",
      "schemaPath": "#/properties/electrode_groups/items/required",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > VALIDATION: Array Uniqueness Enforcement (Working Correctly) > BASELINE: verifies duplicate experimenter name rejection > duplicate-experimenter-names 1`] = `
{
  "errors": [
    {
      "instancePath": "/experimenter_name",
      "message": "must NOT have duplicate items (items ## 1 and 0 are identical)",
      "schemaPath": "#/properties/experimenter_name/uniqueItems",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "experimenter_name",
  ],
  "jsonSchemaErrorMessages": [
    "Key: experimenter_name. | Error: must NOT have duplicate items (items ## 1 and 0 are identical)",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/experimenter_name",
      "message": "must NOT have duplicate items (items ## 1 and 0 are identical)",
      "schemaPath": "#/properties/experimenter_name/uniqueItems",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > VALIDATION: Camera ID Type Enforcement (Working Correctly) > BASELINE: documents negative camera id (allowed by schema) > camera-id-negative 1`] = `
{
  "errors": [
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'lens'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'manufacturer'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'model'",
      "schemaPath": "#/properties/cameras/items/required",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "cameras",
  ],
  "jsonSchemaErrorMessages": [
    "Key: cameras, 0. | Error: must have required property 'lens'",
    "Key: cameras, 0. | Error: must have required property 'manufacturer'",
    "Key: cameras, 0. | Error: must have required property 'model'",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'lens'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'manufacturer'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'model'",
      "schemaPath": "#/properties/cameras/items/required",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > VALIDATION: Camera ID Type Enforcement (Working Correctly) > BASELINE: verifies camera id float rejection > camera-id-float-bug 1`] = `
{
  "errors": [
    {
      "instancePath": "/cameras/0/id",
      "message": "must be integer",
      "schemaPath": "#/properties/cameras/items/properties/id/type",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'lens'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'manufacturer'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'model'",
      "schemaPath": "#/properties/cameras/items/required",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "cameras",
  ],
  "jsonSchemaErrorMessages": [
    "Key: cameras, 0, id. | Error: must be integer",
    "Key: cameras, 0. | Error: must have required property 'lens'",
    "Key: cameras, 0. | Error: must have required property 'manufacturer'",
    "Key: cameras, 0. | Error: must have required property 'model'",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/cameras/0/id",
      "message": "must be integer",
      "schemaPath": "#/properties/cameras/items/properties/id/type",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'lens'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'manufacturer'",
      "schemaPath": "#/properties/cameras/items/required",
    },
    {
      "instancePath": "/cameras/0",
      "message": "must have required property 'model'",
      "schemaPath": "#/properties/cameras/items/required",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > VALIDATION: Empty String Pattern Enforcement (Working Correctly) > BASELINE: verifies empty string rejection > empty-experiment-description 1`] = `
{
  "errors": [
    {
      "instancePath": "/experiment_description",
      "message": "experiment_description cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/experiment_description/pattern",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "experiment_description",
  ],
  "jsonSchemaErrorMessages": [
    "Key: experiment_description. | Error: experiment_description cannot be empty or contain only whitespace",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/experiment_description",
      "message": "experiment_description cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/experiment_description/pattern",
    },
  ],
  "valid": false,
}
`;

exports[`BASELINE: Validation Behavior Documentation > VALIDATION: Empty String Pattern Enforcement (Working Correctly) > BASELINE: verifies whitespace-only string rejection > whitespace-only-session-description 1`] = `
{
  "errors": [
    {
      "instancePath": "/session_description",
      "message": "session_description cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/session_description/pattern",
    },
  ],
  "isValid": false,
  "jsonSchemaErrorIds": [
    "session_description",
  ],
  "jsonSchemaErrorMessages": [
    "Key: session_description. | Error: session_description cannot be empty or contain only whitespace",
  ],
  "jsonSchemaErrors": [
    {
      "instancePath": "/session_description",
      "message": "session_description cannot be empty or contain only whitespace",
      "schemaPath": "#/properties/session_description/pattern",
    },
  ],
  "valid": false,
}
`;
